# cansat-sim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cansat_sim/share/cansat_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cansat_sim/share/cansat_sim/launch/: simulator.launch.py
install/cansat_sim/share/cansat_sim/scripts/: controller.node.py
install/cansat_sim/share/cansat_sim/worlds/: cansat_world.sdf
install/parafoil_cansat_sim/share/parafoil_cansat_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/parafoil_cansat_sim/share/parafoil_cansat_sim/models/cansat/: model.sdf
launch/: simulator.launch.py
log/: latest_build
models/cansat/: model.config  model.sdf  modelrigid.sdf
rviz/: rviz.rviz  setting.rviz
scripts/: align_glide.py  basic_quadcopter_control.py  controller_node.py  controller_node_2.py  red_position.py
src/gazebo_drone/: CMakeLists.txt  package.xml
src/gazebo_drone/model/: vehicle.sdf
test/: run.py
worlds/: cansat.sdf  cansat_test1  cansat_world.sdf
